<?xml version="1.0" encoding="UTF-8"?>

<project
	xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.babai.ssplot</groupId>
	<artifactId>ssplot</artifactId>
	<version>2.3.2</version>

	<name>SSPlot</name>
	<url>http://www.github.com/babaissarkar/ssplot</url>
	<description>
		A simple plotter and numerical solver, which can plot plain text files with numerical data separated by whitespace, and can numerically solve equations and ODEs to generate data and plot them for studying dynamical systems.
		Features :
		1. 2D and 3D plotting.
		2. Plot appearance customization.
		3. Numerically solve and plot ODE and Difference Equations.
		4. Plot functions of one and two variables.
		5. Use its own console or CLI mode for simple calculation tasks.
		6. Special math characters input panel.
	</description>

	<developers>
		<developer>
			<id>babaissarkar</id>
			<name>Subhraman Sarkar</name>
			<email>suvrax@gmail.com</email>
			<timezone>Asia/Kolkata</timezone>
		</developer>
	</developers>

	<licenses>
		<license>
			<name>LGPL-2.1-or-later</name>
			<url>https://www.gnu.org/licenses/old-licenses/lgpl-2.1.txt</url>
		</license>
	</licenses>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>
		<skip.jpackage>false</skip.jpackage>
	</properties>

	<repositories>
		<repository>
			<id>local-repo</id>
			<url>file:///usr/share/maven-repo</url>
		</repository>
	</repositories>

	<dependencies>
		<dependency>
			<groupId>com.formdev</groupId>
			<artifactId>flatlaf</artifactId>
			<version>3.2</version>
		</dependency>
		<dependency>
			<groupId>com.formdev</groupId>
			<artifactId>flatlaf-intellij-themes</artifactId>
			<version>3.2</version>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<version>5.10.0</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>false</filtering>
				<excludes>
					<exclude>filtered/**</exclude>
					<exclude>*.svg</exclude>
				</excludes>
			</resource>
			<resource>
				<directory>src/main/resources/filtered</directory>
				<filtering>true</filtering>
			</resource>
		</resources>

		<plugins>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>javacc-maven-plugin</artifactId>
				<version>3.1.1</version>
				<executions>
					<execution>
						<id>javacc</id>
						<goals>
							<goal>javacc</goal>
						</goals>
						<configuration>
							<sourceDirectory>
								${basedir}/src/main/java/com/babai/ssplot/math/system/parser/internal
							</sourceDirectory>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.5.0</version>
				<configuration>
					<finalName>${project.artifactId}</finalName>
					<outputDirectory>${project.basedir}/jar</outputDirectory>
					<shadedArtifactAttached>true</shadedArtifactAttached>
					<artifactSet>
						<includes>
							<include>com.formdev:flatlaf</include>
							<include>com.formdev:flatlaf-intellij-themes</include>
						</includes>
					</artifactSet>
					<transformers>
						<transformer
							implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
							<mainClass>com.babai.ssplot.ui.MainFrame</mainClass>
						</transformer>
					</transformers>
				</configuration>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.panteleyev</groupId>
				<artifactId>jpackage-maven-plugin</artifactId>
				<version>1.5.0</version>
				
				<configuration>
					<name>${project.name}</name>
					<description>${project.description}</description>
					<input>${project.basedir}${file.separator}jar</input>
					<destination>${project.basedir}</destination>
					<appVersion>${project.version}</appVersion>
					<arguments>${jpackage.args}</arguments>
					<mainClass>com.babai.ssplot.ui.MainFrame</mainClass>
					<mainJar>${project.artifactId}.jar</mainJar>
				</configuration>
				
				<executions>
					<execution>
						<id>win</id>
						<configuration>
							<type>MSI</type>
							<icon>${project.artifactId}.ico</icon>
							<winMenu>true</winMenu>
							<winMenuGroup>${project.name}</winMenuGroup>
							<winShortcut>true</winShortcut>
							<winPerUserInstall>true</winPerUserInstall>
							<winDirChooser>true</winDirChooser>
						</configuration>
					</execution>
					<execution>
						<id>linux</id>
						<configuration>
							<type>DEB</type>
							<icon>src/main/resources/${project.artifactId}.png</icon>
							<installDir>/usr</installDir>
							<linuxAppCategory>Science</linuxAppCategory>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-checkstyle-plugin</artifactId>
				<version>3.2.0</version>
				<executions>
					<execution>
						<id>checkstyle</id>
						<goals>
							<goal>check</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<configLocation>checkstyle.xml</configLocation>
					<!-- Optional: You can suppress warnings from 3rd-party
					libraries with excludeFilter properties -->
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.1.2</version>
			</plugin>
		</plugins>
	</build>
</project>
